--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
         </section>
 
         <aside id="sidebar">
-          <p>About <a href="/About">me</a>.</p>
-          <p>My <a href="/Blog">blog</a>.</p>
+          <p>About <a href="/about">me</a>.</p>
+          <p>My <a href="/blog">blog</a>.</p>
           <p>My <a href="{{ site.github.owner_url }}">github account</a>.</p>
         </aside>
       </div>
