--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,10 @@
 
         <aside id="sidebar">
           <p>About <a href="/about">me</a>.</p>
+          <p>My <a href="/running">running</a>.</p>
           <p>My <a href="/blog">blog</a>.</p>
+          <p><a href="/blog">York Code Dojo</a>.</p>
+          <p><a href="https://yorkdevelopers.org">York Developers</a>.</p>
           <p>My <a href="{{ site.github.owner_url }}">github account</a>.</p>
         </aside>
       </div>
