--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,10 +31,11 @@
         </section>
 
         <aside id="sidebar">
+          <p>@da_betteridge on <a href="https://twitter.com/da_betteridge">Twitter</a>.</p>
           <p>About <a href="/about">me</a>.</p>
           <p>My <a href="/running">running</a>.</p>
           <p>My <a href="/blog">blog</a>.</p>
-          <p><a href="/blog">York Code Dojo</a>.</p>
+          <p><a href="https://www.meetup.com/York-Code-Dojo/">York Code Dojo</a>.</p>
           <p><a href="https://yorkdevelopers.org">York Developers</a>.</p>
           <p>My <a href="{{ site.github.owner_url }}">github account</a>.</p>
         </aside>
