--- a/css/main.css
+++ b/css/main.css
@@ -41,3 +41,11 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+code {
+    background-color:  #fff;
+}
+
+precode {
+    background-color:  #fff;
+}
