--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     margin: 60px auto;
     width: 70%;
 }
@@ -40,7 +40,7 @@ ul.posts {
 
 ul.posts li {
     list-style: none;
-}
+} */
 
 pre code {
     background-color: #f8f8f8;
