--- a/portfolio/portfolio.css
+++ b/portfolio/portfolio.css
@@ -1,38 +1,97 @@
-body {
-    margin: 30px;
-    font-family: Arial, Helvetica, sans-serif;
+.wrapper{
+  display:grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto 30% 40% auto auto;
+  grid-template-areas:
+  "hd"
+  "hero  "
+  "casestudies"
+  "contact"
+  "ft";
+}
+/* case studies */
+.casestudies {
+  align-items: stretch;
+  display:grid;
+  grid-area: casestudies;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: auto auto;
+  justify-self: stretch;
+  margin:0;
+}
+.work{
+	background-color:#F4FAFF;
+  grid-column: span 3;
+	height: auto;
+  padding: 1rem;
+  margin:0;
+}
+.work h2{
+	color: #333745;
+	font-size: 3rem;
+	font-weight:300;
+	text-align: center;
+}
+.content{
+  position:relative;
+}
+.content .content-overlay {
+  background: rgba(0,0,0,0.7);
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0;
+  margin:0;
+  padding:0;
+  -webkit-transition: all 0.4s ease-in-out 0s;
+  -moz-transition: all 0.4s ease-in-out 0s;
+  transition: all 0.4s ease-in-out 0s;
 }
 
-.grid-container {
-    background-color: #f1f1f1;
-    display: grid;
-    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
-  }
+.content:hover .content-overlay{
+  opacity: 1;
+}
 
-  .grid-container .heading{
-    padding: 30px;
-    text-align: center;
-    font-size: 45px;
-    margin-bottom: 30px;
-    grid-column: 1 / span 2;
-  }
+.content-image{
+  width: 100%;
+  height:100%;
+}
+.content-details {
+  position: absolute;
+  text-align: center;
+  padding: 0 1rem;
+  width: 100%;
+  top: 40%;
+  left: 50%;
+  opacity: 0;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  -moz-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
 
-  .project img {
-    max-width: 100%;
-    min-width: 100%;
-  }
+.content:hover .content-details{
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+}
 
-  .project:hover{
-    opacity:0.4;
-    filter:alpha(opacity=40); 
-    -webkit-opacity:0.4; 
-    -moz-opacity:0.4;
-  }
+.content-details h2{
+  color: #F4FAFF;
+  font-weight: 100;
+  margin-bottom: 0.5rem;
+}
 
-  .hide {
-    display: none;
-  }
-  
-  .project:hover > .hide {
-    display: block;
-  }
+.content-details p{
+  color: #F4FAFF;
+  font-size: 1rem;
+}
+
+.fadeIn-bottom{
+  top: 80%;
+}
