Add resources page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
           <p><a href="https://www.meetup.com/York-Code-Dojo/">York Code Dojo</a>.</p>
           <p><a href="https://yorkdevelopers.org">York Developers</a>.</p>
           <p>My <a href="{{ site.github.owner_url }}">github account</a>.</p>
+          <p>Some useful <a href="/resources">resources</a></p>
         </aside>
       </div>
     </div>
