--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 [data-theme="blue"] {
   --textColour: #000000;
   --backgroundColour: #87bbe9;
-  --linkColour: lightgray;
-  --headerColour: #3D3D3D;
+  --linkColour: #323131;
+  --headerColour: #323131;
 }
 
 [data-theme="dark"] {
