--- a/l2b4/l2b4.css
+++ b/l2b4/l2b4.css
@@ -1,1 +1,23 @@
 #map { height: 100vh; }
+
+.btns {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+}
+
+.btns a {
+    display: block;
+    padding: 10px;
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    text-decoration: none;
+    color: #333;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+}
