--- a/l2b4/l2b4.css
+++ b/l2b4/l2b4.css
@@ -28,13 +28,13 @@
     display: none;
 }
 
-@media (min-width: 680px) {
+@media (min-device-width: 680px) {
     .popupImage {
         max-width: 200px;
     }
 }
 
-@media (max-width: 680px) {
+@media (max-device-width: 680px) {
     #fullScreenInfo.visible {
         position: fixed;
         left: 0;
