--- a/brussels_to_paris/cycles.css
+++ b/brussels_to_paris/cycles.css
@@ -5,12 +5,13 @@ body {
     font-family: 'Segoe UI', Helvetica, Arial, Sans-Serif
 }
 
-.row {
+.container {
     display: flex;
+    flex-direction: column;
 }
 
 .column {
-    flex: 90%;
+    /* flex: 90%; */
 }
 
 .title {
@@ -21,4 +22,44 @@ body {
 
 li {
     padding-top: .7rem;
+}
+
+ /* The sliding panel */
+#sidePanel {
+    position: fixed;
+    top: 0;
+    right: -300px; /* Hidden off-screen initially */
+    width: 300px;
+    height: 100%;
+    background-color: #333;
+    color: white;
+    padding: 20px;
+    box-shadow: -2px 0 5px rgba(0,0,0,0.5);
+    transition: right 0.3s ease;
+}
+
+/* When panel is open */
+#sidePanel.open {
+    right: 0;
+}
+
+/* Open button */
+#openBtn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    padding: 10px 20px;
+    background-color: #008CBA;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+/* Close button inside panel */
+#closeBtn {
+    background-color: #f44336;
+    border: none;
+    padding: 10px 15px;
+    color: white;
+    cursor: pointer;
 }
